--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "push" : "git add . && git commit -m",
-    "postpush" : "git push --all"
+    "prepush" : "yarn build",
+    "push": "git add . && git commit -m",
+    "postpush": "git push --all"
   },
   "dependencies": {
     "next": "12.0.2",
@@ -20,6 +21,8 @@
     "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.2",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "postcss": "^8.3.11"
   }
 }
