--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepush" : "yarn build",
+    "prepush": "yarn build",
     "push": "git add . && git commit -m",
     "postpush": "git push --all"
   },
   "dependencies": {
+    "firebase": "^9.5.0",
     "next": "12.0.2",
+    "nodemon": "^2.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sass": "^1.43.4",
