--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
   },
   "dependencies": {
     "firebase": "^9.5.0",
-    "next": "12.0.2",
+    "next": "^12.1.6",
     "nodemon": "^2.0.15",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "sass": "^1.43.4",
     "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
     "autoprefixer": "^10.4.0",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "postcss": "^8.3.11"
+    "postcss": "^8.3.11",
+    "typescript": "^4.6.4"
   }
 }
