--- a/package.json
+++ b/package.json
@@ -11,23 +11,22 @@
     "postpush": "git push --all"
   },
   "dependencies": {
-    "firebase": "^9.5.0",
     "next": "^12.1.6",
     "nodemon": "^2.0.15",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "sass": "^1.43.4",
-    "tailwindcss": "^2.2.19"
+    "sass": "^1.43.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
-    "autoprefixer": "^10.4.0",
+    "autoprefixer": "^10.4.12",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "postcss": "^8.3.11",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.6.4"
   }
 }
