--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,13 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:react-hooks/recommended", "prettier"],
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:react-hooks/recommended",
+    "prettier"
+  ],
   "rules": {
     "@next/next/no-document-import-in-page": "off",
     "semi": ["error", "always"],
-    "quotes": ["error", "single"],
+    "quotes": ["error", "double"],
     "yoda": "error",
     "no-console": ["error", { "allow": ["warn"] }],
     "array-callback-return": ["error", { "checkForEach": true }],
